# bip-course

./: .gitignore  CITATION  LICENSE  README.md  croissant.json  mkdocs.yml  pyproject.toml  requirements.txt
configs/: agb.yaml  multicrop.yaml
docs/: index.md
docs/stylesheets/: extra.css
docs/units/unit0/: README.md
docs/units/unit1/: environment-setup.md  user-account-setup.md
docs/units/unit2/: README.md
docs/units/unit3/: README.md
notebooks/: playground.ipynb  preprocessing.ipynb  statistics.ipynb
scripts/: activate.sh  cleanup.sh  kernel.sh  modules.sh  namespaces.sh  secrets.sh  setup.sh
src/unit3/: submit_agb.sbatch  submit_multicrop.sbatch
units/: _toctree.yml  index.md
units/unit1/: README.md
units/unit2/: README.md
