[project]
name = "bip-course"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "einops>=0.8.1",
    "gdown>=5.2.0",
    "ipykernel>=6.29.5",
    "ipywidgets>=8.1.7",
    "joblib>=1.5.0",
    "rioxarray>=0.19.0",
    "safetensors>=0.5.3",
    "tensorboard>=2.19.0",
    "terratorch==1.0.1",
    "wandb>=0.19.10",
    "webdataset>=0.2.111",
]

[dependency-groups]
dev = [
    "ruff>=0.11.9",
]
